# routes/api.php
@@ -20,5 +20,9 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 Route::group(['prefix' => 'v1'], function () {
     Route::apiResource('subscription_plan', \App\Http\Controllers\Api\v1\SubscriptionPlanController::class);
+
+    Route::post("subscription/subscribe", [\App\Http\Controllers\Api\v1\SubscriptionController::class, "subscribe"]);
+    Route::put("subscription/prolongation/{subscription}", [\App\Http\Controllers\Api\v1\SubscriptionController::class, "prolongation"]);
+    Route::put("subscription/cancel/{subscription}", [\App\Http\Controllers\Api\v1\SubscriptionController::class, "cancel"]);
 });
 
